# QubitEngine

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MakeFile  README.md  SECURITY.md  deploy_phase23.sh  go.mod  helm_dry_run.yaml  makefile  run_gpu_check.sh  run_mpi_check.sh  test_circuit.json  verify_adam.py  verify_gpu_binding.py
.agent/workflows/: web-cache-bust.md
.github/: FUNDING.yml
api/proto/: cache.proto  quantum.proto  registry.proto  scheduler.proto
api/proto/crypto/: crypto.proto
api/proto/education/: education.proto
api/proto/finance/: finance.proto
api/proto/gaming/: gaming.proto
api/proto/music/: music.proto
api/proto/physics/: vqe.proto
backend/: CMakeLists.txt  mpi_test.cpp  vcpkg.json
backend/backends/: backends.go
backend/src/: AdamOptimizer.hpp  MetalContext.hpp  MetalContext.mm  MolecularHamiltonian.hpp  OpenQASM.hpp  QuantumDifferentiator.hpp  QuantumJIT.hpp  QuantumMetrics.hpp  QuantumRegister.cpp  QuantumRegister.hpp  ServiceImpl.cpp  ServiceImpl.hpp  ServiceImpl_Visualize.cpp  Shaders.hpp  benchmark.cpp  main.cpp  python_bindings.cpp  shaders.metal
backend/src/backends/: CloudBackend.hpp  GPUBackend.hpp  GPUContext.hpp  GPUQuantumRegister.cpp  GPUQuantumRegister.hpp  IQuantumBackend.hpp  MockHardwareBackend.hpp  SimulatorBackend.hpp
backend/src/kernels/: GateKernels.hpp  gate_kernels.cu
backend/tests/: Benchmark.cpp  QuantumTests.cpp  verify_bindings.py
bot/discord/: Dockerfile  go.mod  main.go
circuits/: bell.json  stream_test.json
cli/: go.mod
cli/cmd/qctl/: main.go
deploy/docker/: Dockerfile.cli  Dockerfile.engine  Dockerfile.ldd  Dockerfile.web  Dockerifle.engine  docker-compose.yaml  dockerfile.cli  envoy.local.yaml  envoy.yaml
deploy/helm/qubit-engine/: Chart.yaml  values.yaml
deploy/helm/qubit-engine/templates/: _helpers.tpl  deployment-frontend.yaml  external-secret.yaml  ingress.yaml  network-policy.yaml  service.yaml  statefulset-backend.yaml
deploy/k8s/: 00-namespace.yaml  api-gateway-ingress.yaml  autoscaling.yaml  engine-deployment.yaml  engine-service.yaml  grafana.yaml  jaeger.yaml  kind-config.yaml  kustomization.yaml  mpi-cluster.yaml  mpi-statefulset.yaml  multi-cluster.yaml  prometheus.yaml  registry-deployment.yaml  scheduler-deployment.yaml  test-job.yaml
docs/: BRANCHING.md
modules/crypto/: Dockerfile  go.mod  main.go
modules/education/: main.go
modules/finance/: main.go
modules/gaming/: Dockerfile  go.mod  main.go
modules/music/: Dockerfile  go.mod  main.go
modules/physics/: main.go
scripts/: build.ps1  build.sh  generate_protos.sh
services/cache/: Dockerfile  go.mod  go.sum  main.go
services/registry/: Dockerfile  go.mod  go.sum  main.go
services/scheduler/: Dockerfile  go.mod  go.sum  main.go
web/: package-lock.json  package.json  tsconfig.app.json
web/src/: App.css  App.tsx
web/src/components/: ArtStudio.css  ArtStudio.tsx  BlochSphere.tsx  GenerativeCanvas.tsx  QuantumAudio.css  QuantumAudio.tsx
web/src/components/art/: ChaosDice.css  ChaosDice.tsx  MatterSculpt.css  MatterSculpt.tsx  SoundWaves.css  SoundWaves.tsx
web/src/components/chemistry/: QuantumChemistry.css  QuantumChemistry.tsx
web/src/components/composer/: CircuitComposer.tsx  CircuitGrid.tsx  GatePalette.tsx
web/src/components/crypto/: QuantumBB84.css  QuantumBB84.tsx
web/src/components/education/: CircuitLibrary.tsx  QuizMode.tsx  TutorialOverlay.tsx  index.ts
web/src/gpu/: WebGPURenderer.ts
